Movie card title and release date fonts modified

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>Moovie search app</title>
 </head>
 <body class="font-Josefin">
-    <header class="flex flex-col lg:flex-row items-center justify-between p-5 bg-[url('/assets/rose-petals.png')] shadow-2xl">
+    <header class="flex flex-col lg:flex-row items-center justify-between p-3 bg-[url('/assets/rose-petals.png')] shadow-2xl">
         <div>
             <p class="text-4xl text-white font-bold">Movie<span class="text-yellow-400 text-xl">app</span></p>
         </div>
@@ -32,7 +32,7 @@
             </div>
         </div>
     </main>
-    <div class="modalloader flex justify-center items-center h-full w-full absolute top-0 bg-gray-700  bg-opacity-90">
+    <div class="modalloader flex justify-center items-center h-[2000px] w-full absolute top-0 bottom-0 bg-gray-700  bg-opacity-90">
         <div class="spinner-border text-primary" role="status">
             <span class="sr-only">Loading...</span>
         </div>                      
