--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <input class="w-full border-white border-2 rounded-3xl font-bold outline-none mt-4 py-3 px-4 cursor-pointer bg-blue-900 text-white" type="text" placeholder="Search..." id="search">
         </form>
     </header>
-    <main class="bg-[url('/assets/rose-petals.png')] lg:px-20 xl:px-40">
+    <main class="bg-[url('assets/rose-petals.png')] lg:px-20 xl:px-40">
         <div class="genre-tags flex flex-wrap justify-center gap-2 lg:w-[70%] m-auto pt-10">
         </div>
         <h1 class="text-white text-center md:text-left font-bold text-3xl mt-5 md:my-5">Popular Movies</h1>
