Image paths changed

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>Moovie search app</title>
 </head>
 <body class="font-Josefin">
-    <header class="flex flex-col lg:flex-row items-center justify-between p-3 bg-[url('/assets/rose-petals.png')] shadow-2xl">
+    <header class="flex flex-col lg:flex-row items-center justify-between p-3 bg-[url('https://firebasestorage.googleapis.com/v0/b/moovieapp-504a1.appspot.com/o/images%2Frose-petals.png?alt=media&token=4a704f62-446f-43ec-8b42-54752524ed66')] shadow-2xl">
         <div>
             <p class="text-4xl text-white font-bold">Movie<span class="text-yellow-400 text-xl">app</span></p>
         </div>
@@ -18,7 +18,7 @@
             <input class="w-full border-white border-2 rounded-3xl font-bold outline-none mt-4 py-3 px-4 cursor-pointer bg-blue-900 text-white" type="text" placeholder="Search..." id="search">
         </form>
     </header>
-    <main class="bg-[url('assets/rose-petals.png')] lg:px-20 xl:px-40">
+    <main class="bg-[url('https://firebasestorage.googleapis.com/v0/b/moovieapp-504a1.appspot.com/o/images%2Fsun-tornado.png?alt=media&token=2090e531-d2ce-41a5-b2c7-4e3b11c99faf')] lg:px-20 xl:px-40">
         <div class="genre-tags flex flex-wrap justify-center gap-2 lg:w-[70%] m-auto pt-10">
         </div>
         <h1 class="text-white text-center md:text-left font-bold text-3xl mt-5 md:my-5">Popular Movies</h1>
@@ -38,7 +38,7 @@
         </div>                      
     </div>
     <footer>
-        <div class="bg-[url('/assets/rose-petals.png')] text-center py-20">
+        <div class="bg-[url('https://firebasestorage.googleapis.com/v0/b/moovieapp-504a1.appspot.com/o/images%2Frose-petals.png?alt=media&token=4a704f62-446f-43ec-8b42-54752524ed66')] text-center py-5">
             <p class="text-white font-bold py-5">© 2023 Movie app. All rights reserved. | 6060 Főút, Gyimesfelsőlok | www.movieapp.com
             </p>
         </div>
